# soleil-ai-review-engine

./: .cursorrules  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MIGRATION.md  PACKAGES.md  README.md  package-lock.json  pnpm-workspace.yaml
.claude-plugin/: marketplace.json
.github/workflows/: ci-integration.yml  ci-quality.yml  ci-report.yml  ci-unit-tests.yml  ci.yml  gitnexus-web-ci.yml  publish.yml  soleil-ai-review-engine-web-ci.yml
.sisyphus/drafts/: noodlbox-comparison.md  soleil-ai-review-engine-brainstorming.md
docs/security/: SECURITY_INTELLIGENCE_MASTER_REPORT.md
eval/: .env.example  README.md  __init__.py  pyproject.toml  run_eval.py
eval/agents/: soleil-ai-review-engine_agent.py
eval/analysis/: analyze_results.py
eval/bridge/: mcp_bridge.py  soleil-ai-review-engine_tools.sh
eval/configs/modes/: baseline.yaml  native.yaml  native_augment.yaml
eval/environments/: soleil-ai-review-engine_docker.py
eval/prompts/: instance_native.jinja  instance_native_augment.jinja  system_native.jinja  system_native_augment.jinja
gitnexus-web/: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  vite.config.mjs  vitest.config.mjs
gitnexus-web/api/: proxy.ts
soleil-ai-review-engine/: README.md  package-lock.json  package.json  soleil-engine-cli-1.4.0.tgz  vitest.config.ts
soleil-ai-review-engine-test-setup/: .gitignore
soleil-ai-review-engine-web/: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
soleil-ai-review-engine-web/api/: proxy.ts
(+163 files in other folders)
