[project]
name = "soleil-ai-review-engine-swebench-eval"
version = "0.1.0"
description = "SWE-bench evaluation harness with soleil-ai-review-engine code intelligence integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mini-swe-agent>=2.0.0",
    "litellm>=1.50.0",
    "datasets>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
soleil-ai-review-engine-eval = "run_eval:app"
soleil-ai-review-engine-eval-analyze = "analysis.analyze_results:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "environments", "analysis", "bridge"]
extra-files = ["run_eval.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
